<resources>
    <string name="app_name">IceCream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_question">What is your name?</string>
    <string name="type_name">Type your name here</string>
    <string name="next_button">Next</string>
    <string name="order_ice_cream">How many scoops of ice cream do you want to order?</string>
    <string name="one_scoop">1</string>
    <string name="six_scoops">6</string>
    <string name="twelve_scoops">12</string>
    <string name="eighteen_scoops">18</string>
    <string name="twenty_four_scoops">24</string>
    <string name="thirty_scoops">30</string>
    <string name="cancel_button">Cancel</string>
    <string name="try_again">Required</string>
    <string name="peach">Peach</string>
    <string name="vanilla">Vanilla</string>
    <string name="mint">Mint</string>
    <string name="strawberry">Strawberry</string>
    <string name="chocolate">Chocolate</string>
    <string name="lemon">Lemon</string>
    <string name="choose_flavors">Choose the flavor(s) for your ice cream!</string>
</resources>