<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.icecream.model.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="com.example.icecream.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <CheckBox
                android:id="@+id/peach_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peach"
                style="?attr/textAppearanceBody1"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_flavors" />

            <CheckBox
                android:id="@+id/vanilla_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilla"
                style="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/peach_check" />

            <CheckBox
                android:id="@+id/mint_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mint"
                style="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vanilla_check" />

            <CheckBox
                android:id="@+id/strawberry_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strawberry"
                style="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mint_check" />

            <CheckBox
                android:id="@+id/chocolate_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                style="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strawberry_check" />

            <CheckBox
                android:id="@+id/lemon_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lemon"
                style="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chocolate_check" />

            <TextView
                android:id="@+id/choose_flavors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_flavors"
                style="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/next_flavor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@string/next_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lemon_check" />

            <Button
                android:id="@+id/cancel_flavor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_flavor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>